[gd_scene load_steps=3 format=3 uid="uid://bdao44vpkqwn2"]

[ext_resource type="Theme" uid="uid://dtfljjvv3jual" path="res://UI/DefaultTheme.tres" id="1_1cl1e"]
[ext_resource type="Script" path="res://UI/BattleMenu.gd" id="2_rinlk"]

[node name="BattleMenu" type="HBoxContainer"]
offset_left = 1046.0
offset_top = 15.0
offset_right = 1470.0
offset_bottom = 63.0
scale = Vector2(2, 2)
size_flags_horizontal = 10
size_flags_vertical = 10
theme = ExtResource("1_1cl1e")
script = ExtResource("2_rinlk")
metadata/_edit_group_ = true

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="FireballButton" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("1_1cl1e")
text = "Fireball"

[node name="LightningButton" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Lightning"

[node name="DrainButton" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Drain"

[connection signal="button_down" from="PanelContainer/MarginContainer/HBoxContainer/FireballButton" to="." method="_on_fireball_button_button_down"]
[connection signal="button_down" from="PanelContainer/MarginContainer/HBoxContainer/LightningButton" to="." method="_on_lightning_button_button_down"]
[connection signal="button_down" from="PanelContainer/MarginContainer/HBoxContainer/DrainButton" to="." method="_on_drain_button_button_down"]
